// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Invoice - InvoiceItem Should match snapshot when loading on desktop 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1ie1ajo-MuiGrid-root"
    data-testid="row_undefined"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <div
        class="MuiBox-root css-wenq9c"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
          style="width: 80px; height: 80px;"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-true MuiGrid-grid-md-3 css-1bwqgwy-MuiGrid-root"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
        data-testid="mfr-name"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
          style="width: 80px;"
        />
      </h6>
      <div
        class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
        />
      </div>
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
          style="width: 120px;"
        />
      </h6>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-md-true css-70o5km-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-pvj6rd-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-bql9hf-MuiTypography-root"
          data-testid="order-price"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
            style="width: 50px;"
          />
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-pvj6rd-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-bql9hf-MuiTypography-root"
          data-testid="order-quantity"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
            style="width: 30px;"
          />
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-pvj6rd-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-bql9hf-MuiTypography-root"
          data-testid="order-ship-quantity"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
            style="width: 30px;"
          />
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-pvj6rd-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-pajjnf-MuiTypography-root"
          data-testid="order-price-total"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
            style="width: 50px;"
          />
        </h6>
      </div>
    </div>
  </div>
</div>
`;

exports[`Invoice - InvoiceItem Should match snapshot when loading on mobile 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-16r72s4-MuiGrid-root"
    data-testid="row_undefined"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <div
        class="MuiBox-root css-wenq9c"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
          style="width: 80px; height: 80px;"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-true MuiGrid-grid-md-3 css-1bwqgwy-MuiGrid-root"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
        data-testid="mfr-name"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
          style="width: 80px;"
        />
      </h6>
      <div
        class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
        />
      </div>
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
          style="width: 120px;"
        />
      </h6>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-md-true css-70o5km-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
        >
          Price
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
        >
          Order Qty
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
        >
          Ship Qty
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-16kdk2k"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
          >
            Total
          </h6>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-pvj6rd-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-uh21ff-MuiTypography-root"
          data-testid="order-price"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
            style="width: 50px;"
          />
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-pvj6rd-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-uh21ff-MuiTypography-root"
          data-testid="order-quantity"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
            style="width: 30px;"
          />
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-pvj6rd-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-uh21ff-MuiTypography-root"
          data-testid="order-ship-quantity"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
            style="width: 30px;"
          />
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-pvj6rd-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-lq6407-MuiTypography-root"
          data-testid="order-price-total"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
            style="width: 50px;"
          />
        </h6>
      </div>
    </div>
  </div>
</div>
`;

exports[`Invoice - InvoiceItem Should match snapshot with an invoice 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-16r72s4-MuiGrid-root"
    data-testid="row_1738433F4-91A7-4637-8C60-B4DF59A060C1"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <div
        class="MuiBox-root css-wenq9c"
      >
        <img
          alt="120 x 7.5, 100 Sq Yd, Geosynthetic, Double, Photodegradable, Erosion Control Blanket"
          class="MuiBox-root css-4w7ia0"
          data-testid="product-image"
          src="null"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-true MuiGrid-grid-md-3 css-1bwqgwy-MuiGrid-root"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
        data-testid="mfr-name"
      >
        Advanced Drainage Systems, Inc.
      </h6>
      <div
        class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
      >
        <div
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-19m3wr6-MuiTypography-root"
          data-testid="product-name"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
            data-testid="product-link"
            href="/product/1738433F4-91A7-4637-8C60-B4DF59A060C1"
          >
            <div>
              <p
                aria-label="120 x 7.5, 100 Sq Yd, Geosynthetic, Double, Photodegradable, Erosion Control Blanket"
                class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                data-mui-internal-clone-element="true"
              >
                120 x 7.5, 100 Sq Yd, Geosynthetic, Double, Photodegradable, Erosion Control Blanket
              </p>
            </div>
          </a>
        </div>
      </div>
      <div
        class="MuiBox-root css-0"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
          data-testid="part-number"
        >
          Part# 8X1125STRAWDN
        </h6>
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
          data-testid="mfr-number"
        >
          MFR# 00S2TT
        </h6>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-md-true css-70o5km-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
        >
          Price
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
        >
          Order Qty
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
        >
          Ship Qty
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-16kdk2k"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
          >
            Total
          </h6>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-pvj6rd-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-uh21ff-MuiTypography-root"
          data-testid="order-price"
        >
          $43.59 ea
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-pvj6rd-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-uh21ff-MuiTypography-root"
          data-testid="order-quantity"
        >
          1
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-pvj6rd-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-uh21ff-MuiTypography-root"
          data-testid="order-ship-quantity"
        >
          1
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-pvj6rd-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-lq6407-MuiTypography-root"
          data-testid="order-price-total"
        >
          $43.59
        </h6>
      </div>
    </div>
  </div>
</div>
`;

exports[`Invoice - InvoiceItem Should match snapshot with an invoice as Mincron 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-16r72s4-MuiGrid-root"
    data-testid="row_1738433F4-91A7-4637-8C60-B4DF59A060C1"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <div
        class="MuiBox-root css-wenq9c"
      >
        <img
          alt="120 x 7.5, 100 Sq Yd, Geosynthetic, Double, Photodegradable, Erosion Control Blanket"
          class="MuiBox-root css-4w7ia0"
          data-testid="product-image"
          src="null"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-true MuiGrid-grid-md-3 css-1bwqgwy-MuiGrid-root"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
        data-testid="mfr-name"
      >
        Advanced Drainage Systems, Inc.
      </h6>
      <div
        class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
      >
        <div
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-19m3wr6-MuiTypography-root"
          data-testid="product-name"
        >
          <div>
            <p
              aria-label="120 x 7.5, 100 Sq Yd, Geosynthetic, Double, Photodegradable, Erosion Control Blanket"
              class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
              data-mui-internal-clone-element="true"
            >
              120 x 7.5, 100 Sq Yd, Geosynthetic, Double, Photodegradable, Erosion Control Blanket
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root css-0"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
          data-testid="part-number"
        >
          Part# 8X1125STRAWDN
        </h6>
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
          data-testid="mfr-number"
        >
          MFR# 00S2TT
        </h6>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-md-true css-70o5km-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
        >
          Price
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
        >
          Order Qty
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
        >
          Ship Qty
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-16kdk2k"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
          >
            Total
          </h6>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-pvj6rd-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-uh21ff-MuiTypography-root"
          data-testid="order-price"
        >
          $43.59 ea
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-pvj6rd-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-uh21ff-MuiTypography-root"
          data-testid="order-quantity"
        >
          1
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-pvj6rd-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-uh21ff-MuiTypography-root"
          data-testid="order-ship-quantity"
        >
          1
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-pvj6rd-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-lq6407-MuiTypography-root"
          data-testid="order-price-total"
        >
          $43.59
        </h6>
      </div>
    </div>
  </div>
</div>
`;

exports[`Invoice - InvoiceItem Should match snapshot with undefined product on desktop 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1ie1ajo-MuiGrid-root"
    data-testid="row_undefined"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <div
        class="MuiBox-root css-wenq9c"
      >
        <img
          alt="Product Picture"
          class="MuiBox-root css-4w7ia0"
          data-testid="product-image"
          src="Product picture"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-true MuiGrid-grid-md-3 css-1bwqgwy-MuiGrid-root"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
        data-testid="mfr-name"
      />
      <div
        class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
      >
        <div
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-19m3wr6-MuiTypography-root"
          data-testid="product-name"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
            data-testid="product-link"
            href="/product/undefined"
          >
            <div>
              <p
                aria-label=""
                class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                data-mui-internal-clone-element="true"
              />
            </div>
          </a>
        </div>
      </div>
      <div
        class="MuiBox-root css-0"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
          data-testid="part-number"
        />
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
          data-testid="mfr-number"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-md-true css-70o5km-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-pvj6rd-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-bql9hf-MuiTypography-root"
          data-testid="order-price"
        >
          $0.00 ea
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-pvj6rd-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-bql9hf-MuiTypography-root"
          data-testid="order-quantity"
        >
          -
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-pvj6rd-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-bql9hf-MuiTypography-root"
          data-testid="order-ship-quantity"
        >
          -
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-pvj6rd-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-pajjnf-MuiTypography-root"
          data-testid="order-price-total"
        >
          $0.00
        </h6>
      </div>
    </div>
  </div>
</div>
`;

exports[`Invoice - InvoiceItem Should match snapshot with undefined product on mobile 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-16r72s4-MuiGrid-root"
    data-testid="row_undefined"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <div
        class="MuiBox-root css-wenq9c"
      >
        <img
          alt="Product Picture"
          class="MuiBox-root css-4w7ia0"
          data-testid="product-image"
          src="Product picture"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-true MuiGrid-grid-md-3 css-1bwqgwy-MuiGrid-root"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
        data-testid="mfr-name"
      />
      <div
        class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
      >
        <div
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-19m3wr6-MuiTypography-root"
          data-testid="product-name"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
            data-testid="product-link"
            href="/product/undefined"
          >
            <div>
              <p
                aria-label=""
                class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                data-mui-internal-clone-element="true"
              />
            </div>
          </a>
        </div>
      </div>
      <div
        class="MuiBox-root css-0"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
          data-testid="part-number"
        />
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
          data-testid="mfr-number"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-md-true css-70o5km-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
        >
          Price
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
        >
          Order Qty
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
        >
          Ship Qty
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-16kdk2k"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
          >
            Total
          </h6>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-pvj6rd-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-uh21ff-MuiTypography-root"
          data-testid="order-price"
        >
          $0.00 ea
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-pvj6rd-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-uh21ff-MuiTypography-root"
          data-testid="order-quantity"
        >
          -
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-pvj6rd-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-uh21ff-MuiTypography-root"
          data-testid="order-ship-quantity"
        >
          -
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-pvj6rd-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-lq6407-MuiTypography-root"
          data-testid="order-price-total"
        >
          $0.00
        </h6>
      </div>
    </div>
  </div>
</div>
`;
